--- a/GR1/languageApp/ios/Podfile
+++ b/GR1/languageApp/ios/Podfile
@@ -1,7 +1,7 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'languageApp' do
   config = use_native_modules!
@@ -11,6 +11,10 @@ target 'languageApp' do
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
+
+  pod 'react-native-slider', :path => '../node_modules/@react-native-community/slider'
+
+
 
   target 'languageAppTests' do
     inherit! :complete
