--- a/GR1/languageApp/android/settings.gradle
+++ b/GR1/languageApp/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'languageApp'
+include ':@react-native-firebase_app'
+project(':@react-native-firebase_app').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/app/android')
 include ':@react-native-community_slider'
 project(':@react-native-community_slider').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/slider/android')
 include ':@react-native-community_slider'
