--- a/GR1/languageApp/ios/Podfile
+++ b/GR1/languageApp/ios/Podfile
@@ -16,6 +16,8 @@ target 'languageApp' do
 
 
 
+  pod 'RNFBApp', :path => '../node_modules/@react-native-firebase/app'
+
   target 'languageAppTests' do
     inherit! :complete
     # Pods for testing
