--- a/GR1/languageApp/package.json
+++ b/GR1/languageApp/package.json
@@ -14,6 +14,8 @@
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/slider": "^4.1.10",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/messaging": "^13.0.1",
     "@react-native-masked-view/masked-view": "^0.2.4",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
@@ -31,6 +33,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
     "react-native-i18n": "^2.0.15",
+    "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.9.2",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.2.0",
@@ -41,7 +44,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
