--- a/GR1/languageApp/package.json
+++ b/GR1/languageApp/package.json
@@ -29,6 +29,7 @@
     "react-native": "^0.65.1",
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-elements": "^3.4.2",
+    "react-native-floating-action-menu": "^1.2.4",
     "react-native-furi": "^0.0.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
