--- a/GR1/languageApp/android/app/build.gradle
+++ b/GR1/languageApp/android/app/build.gradle
@@ -181,7 +181,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
-
+    implementation project(':react-native-svg')
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation platform('com.google.firebase:firebase-bom:29.0.0') //
