--- a/GR1/languageApp/android/settings.gradle
+++ b/GR1/languageApp/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'languageApp'
+include ':react-native-svg'
+project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-svg/android')
 include ':@react-native-firebase_app'
 project(':@react-native-firebase_app').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/app/android')
 include ':@react-native-community_slider'
