--- a/GR1/languageApp/package.json
+++ b/GR1/languageApp/package.json
@@ -13,6 +13,7 @@
     "@phamhuuan/react-native-toast-message": "^1.0.2",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/slider": "^4.1.10",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/messaging": "^13.0.1",
@@ -23,10 +24,13 @@
     "@react-navigation/stack": "^5.14.5",
     "@types/query-string": "^6.3.0",
     "axios": "^0.21.1",
+    "css-select": "^4.2.1",
+    "css-tree": "^2.1.0",
     "native-base": "^3.0.2",
     "prop-types": "^15.7.2",
     "react": "^0.0.0-0203b6567",
     "react-native": "^0.65.1",
+    "react-native-calendars": "^1.1277.0",
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-elements": "^3.4.2",
     "react-native-floating-action-menu": "^1.2.4",
@@ -34,6 +38,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
     "react-native-i18n": "^2.0.15",
+    "react-native-kanji-animation": "^1.3.0",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.9.2",
     "react-native-progress": "^5.0.0",
@@ -42,6 +47,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-sound": "^0.11.1",
+    "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
