--- a/GR1/apiLanguage/package.json
+++ b/GR1/apiLanguage/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.6.2",
     "pdf2json": "^1.2.5",
     "socket.io": "^4.3.1",
-    "socket.io-client": "^4.3.2"
+    "socket.io-client": "^4.3.2",
+    "tesseract.js": "^2.1.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
