--- a/GR1/languageApp/package.json
+++ b/GR1/languageApp/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/messaging": "^13.0.1",
     "@react-native-masked-view/masked-view": "^0.2.4",
+    "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
@@ -41,13 +42,17 @@
     "react-native-kanji-animation": "^1.3.0",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.9.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-see-more-inline": "^1.3.0",
+    "react-native-select-dropdown": "^1.13.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-sound": "^0.11.1",
     "react-native-svg": "^12.3.0",
+    "react-native-text-size": "^4.0.0-rc.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
