--- a/GR1/languageApp/android/app/build.gradle
+++ b/GR1/languageApp/android/app/build.gradle
@@ -182,6 +182,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation project(':react-native-svg')
+    implementation project(':react-native-webview')
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation platform('com.google.firebase:firebase-bom:29.0.0') //
