--- a/GR1/languageApp/package.json
+++ b/GR1/languageApp/package.json
@@ -39,12 +39,16 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-htmlview": "^0.16.0",
     "react-native-i18n": "^2.0.15",
+    "react-native-image-crop-picker": "^0.37.3",
+    "react-native-image-picker": "^4.8.3",
     "react-native-kanji-animation": "^1.3.0",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.9.2",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.2.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-see-more-inline": "^1.3.0",
@@ -54,6 +58,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-text-size": "^4.0.0-rc.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.18.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
