--- a/GR1/apiLanguage/package.json
+++ b/GR1/apiLanguage/package.json
@@ -12,6 +12,8 @@
     "async": "^3.2.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.10",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.3.0",
@@ -25,6 +27,7 @@
     "node-cron": "^3.0.0",
     "nodemailer": "^6.6.2",
     "pdf2json": "^1.2.5",
+    "request": "^2.88.2",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
     "tesseract.js": "^2.1.5"
