--- a/GR1/apiLanguage/vercel.json
+++ b/GR1/apiLanguage/vercel.json
@@ -2,9 +2,10 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "./index.js",
-			"use": "@vercel/node"
-		}
+			"src": "package.json", 
+			"use": "vercel-sapper"
+		  }
+	  
 	],
 	"routes": [
 		{
