--- a/GR1/apiLanguage/vercel.json
+++ b/GR1/apiLanguage/vercel.json
@@ -2,10 +2,9 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "package.json", 
-			"use": "vercel-sapper"
-		  }
-	  
+			"src": "./index.js",
+			"use": "@vercel/node"
+		}
 	],
 	"routes": [
 		{
