--- a/GR1/apiLanguage/package.json
+++ b/GR1/apiLanguage/package.json
@@ -32,6 +32,10 @@
     "socket.io-client": "^4.3.2",
     "tesseract.js": "^2.1.5"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
