--- a/GR1/languageApp/android/app/src/main/AndroidManifest.xml
+++ b/GR1/languageApp/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:usesCleartextTraffic="true"
       android:allowBackup="false"
+      android:largeHeap="true"
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
